--- a/stylessweet.css
+++ b/stylessweet.css
@@ -5,17 +5,41 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #5f5f5f;
+    background: url("https://media.tenor.com/9vRAkntogEMAAAAd/background.gif");
+    background-size: cover;
 }
 
 #container {
     text-align: center;
 }
+#imageContainer {
+    text-align: center;
+    align-items: center;
+    margin-top: 20px;
+}
 #showImageBtn{
     width: 200px;
     height: 60px;
+    margin-top: 20px;
 }
 
 #imageContainer img {
-    max-width: 100%;
+    max-width: 50%;
+    justify-content: center;
+}
+#showIPBtn{
+    width: 200px;
+    height: 60px;
+    margin-top: 20px;
+}
+#ฺBackWeb{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100px; 
+    height: 40px; 
+    text-align: center;
+    background-color: rgb(204, 58, 58)e7e; 
+    color: #4e4242; 
+    padding: 10px; 
 }
