--- a/stylessweet.css
+++ b/stylessweet.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background: url("https://media.tenor.com/9vRAkntogEMAAAAd/background.gif");
+    background: url("https://wallpaperxyz.com/wp-content/uploads/Gif-Animated-Wallpaper-Background-Full-HD-Free-Download-for-PC-Macbook-261121-Wallpaperxyz.com-47.gif");
     background-size: cover;
 }
 
@@ -22,24 +22,45 @@ body {
     height: 60px;
     margin-top: 20px;
 }
+#showImageBtn:hover {
+    width: 200px;
+    height: 60px;
+    margin-top: 20px;
+    background-color: #f74e65;
+    color: #000000;
+}
 
 #imageContainer img {
     max-width: 50%;
     justify-content: center;
+    border: 10px solid #ff7171; /* สีของกรอบ */
+    border-radius: 8px; /* ขอบมน */
+    transition: border 0.3s; /* เพิ่ม transition property */
 }
 #showIPBtn{
     width: 200px;
     height: 60px;
     margin-top: 20px;
 }
-#ฺBackWeb{
+#showIPBtn:hover{
+    width: 200px;
+    height: 60px;
+    margin-top: 20px;
+    background-color: #f74e65;
+    color: #000000;
+}
+#BackWeb {
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100px; 
     height: 40px; 
     text-align: center;
-    background-color: rgb(204, 58, 58)e7e; 
-    color: #4e4242; 
+    background-color: rgb(104, 103, 103); /* เพิ่ม ; ที่หลัง rgb(204, 58, 58) */
+    color: #161616; 
     padding: 10px; 
+}
+#BackWeb:hover {
+    background-color: #ff0000; 
+    color: #ffffff; 
 }
